2004-09-27 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Released gentoolkit-0.2.0_pre9
	* Released gentoolkit-dev-0.2.0_pre4

2004-08-01 Marius Mauch <genone@gentoo.org>
	* Fixed grep expression for `qpkg -f`

2004-04-14 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Released gentoolkit-dev-0.2.0_pre3
	
2004-03-31 Marius Mauch <genone@gentoo.org>
	* glsa-check updates, fixing #45528 and #45522, adding support for
		rXX operators and passing filenames as arguments to Glsa()

2004-03-13 Marius Mauch <genone@gentoo.org>
	* Added glsa-check and glsa.py, please note:
		- they are only temporary for testing, so no manpage/ChangeLog
		- their CVS home is in gentoo-projects
	* fixed bugs #42160, #40935, #43389

2004-02-08 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added ebump
	* Added gensync
	* Added epkgmove, closes #36663.
	
2004-02-06 Marius Mauch <genone@gentoo.org>
	* fixed bugs #40159, #39798, #39652, #39596, #39293
	* changed etcat and equery behavior for ambigous package names,
		they now return values for all matching packages rather
		than erroring out
	* added "will be phased out" messages to etcat and qpkg

2004-01-23 Marius Mauch <genone@gentoo.org>
	* lots of bugfixes

2004-01-14 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added src/ego to gentoolkit-dev

2003-01-12 Marius Mauch <genone@gentoo.org>
	* fixed traceback in equery
	* added more information on "equery list"

2004-01-10 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added src/ego

2004-01-07 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added new build system
	* Added src/old-scripts, the scripts from app-portage/gentoolkit
	* Renamed gentool to equery
	* Released 0.2.0_pre1
        
2003-12-08 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Removed emerge-rsync, emerge-webrsync
	* Added moo
	* Added skeleton man pages to all packages
	* Added Makefile
	
2003-10-04 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Rewrote dep-clean to python
		
2003-06-31 Karl Trygve Kalleberg <karltk@gentoo.org>